Fix about section not being completely visible

--- a/src/pages/about/about.page.scss
+++ b/src/pages/about/about.page.scss
@@ -43,7 +43,7 @@
   }
 
   .item-expand.active {
-    max-height: 200px;
+    max-height: 50vh;
     transition: max-height 0.3s ease-out;
   }
 }
